# rby1_ws

./: .gitignore  .gitmodules  launch_nodes.py  launch_rby1_gnome.sh  launch_rby1_system.py  launch_rby1_terminator.py  link_poses.json  ros2_readme.txt
src/: robot_config.yaml
src/kinematics_solver/: package.xml  setup.cfg  setup.py
src/other_tools/: fk_solver_03.py
src/point_cloud_pub/: package.xml  setup.cfg  setup.py
src/rby1_joint_state_publisher/: package.xml  setup.cfg  setup.py
src/rby1_master_control/: package.xml  setup.cfg  setup.py
src/rby1_urdf_visualization/: CMakeLists.txt  package.xml
src/rby1_urdf_visualization/_urdf/rby1_urdf/: model.urdf
src/rby1_urdf_visualization/_urdf/rby1_urdf/meshes/: FT_SENSOR_L.stl
src/rby1_urdf_visualization/launch/: display.launch.py  display_with_joint_gui.launch.py
src/rby1_urdf_visualization/rviz/: urdf.rviz
src/rby1_urdf_visualization/urdf/rby1_urdf/: model.urdf
src/rby1_urdf_visualization/urdf/rby1_urdf/model/: model.usd
src/rby1_urdf_visualization/urdf/rby1_urdf/model/configuration/: model_physics.usd  model_sensor.usd
src/rby1_urdf_visualization/urdf/test_urdf/: 09-test.urdf.xacro
src/rby1_visualizer/: package.xml  setup.cfg  setup.py
src/ros2_aruco/: readme.txt
src/ros2_aruco/ros2_aruco/: README.txt  (+1 more)
test_codes/: 03_robot_state.py  04_robot_state_stream.py  09_demo_motion.py  cartesian_move.py  cartesian_move_left.py  gemini_test.py  go_back.py  move_arms_cartesian.py  move_joint_test_code.py  movebase.py  robot_state_stream.py
test_codes/ikp/: iky_01.py  model.urdf  test_urdf.py
(+35 files in other folders)
