<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rby1_urdf_visualization</name>
  <version>1.1.0</version>
  <description>This package contains a number of URDF tutorials.</description>
  <maintainer email="ruk.shan@outlook.com">Rukshan H</maintainer>

  <license>BSD 3-clause</license>
  <url>http://ros.org/wiki/rby1_urdf_visualization</url>
  <author email="ruk.shan@outlook.com">Rukshan </author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
